--- a/package.json
+++ b/package.json
@@ -53,8 +53,9 @@
   "dependencies": {
     "cli-table": "^0.3.1",
     "deasync": "^0.1.9",
-    "filesize": "^3.5.10",
     "madoos-type": "0.0.8",
-    "pretty-ms": "^2.1.0"
+    "pretty-bytes": "^4.0.2",
+    "pretty-ms": "^2.1.0",
+    "ramda": "^0.24.1"
   }
 }
