--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "nodemon": "^1.11.0",
-    "standard": "^8.6.0"
+    "standard": "^8.6.0",
+    "test-console": "^1.0.0"
   },
   "standard": {
     "env": {
