--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
   "dependencies": {
     "cli-table": "^0.3.1",
     "deasync": "^0.1.9",
+    "has-keys": "^0.1.0",
+    "madoos-functional-implementations": "0.0.1",
     "madoos-type": "0.0.8",
     "pretty-bytes": "^4.0.2",
     "pretty-ms": "^2.1.0",
